src/test/deca/syntax/invalid/extension/MatSansNew.deca
// mismatched input ']' expecting {STRING, '{', '(', 'false', 'true', 'readInt', 'readFloat', 'new', 'this', 'null', '-', '!', FLOAT, INT, IDENT}
// Description:
//    Matrice sans new
//

{
    int[][][][][][] a = float[][][][][][];
}

